Replaced anything related to @this_vid2 to @this__vid3

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "consumerKey": "<PUT CONSUMER KEY HERE>",
-  "consumerSecret": "<PUT CONSUMER SECRET HERE>",
-  "accessToken": "<PUT ACCESS TOKEN HERE>",
-  "accessSecret": "<PUT ACCESS SECRET HERE>",
-  "accountName": "<PUT ACCOUNT NAME WITHOUT @ HERE>"
+  "consumerKey": "PUT CONSUMER KEY HERE",
+  "consumerSecret": "PUT CONSUMER SECRET HERE",
+  "accessToken": "PUT ACCESS TOKEN HERE",
+  "accessSecret": "PUT ACCESS SECRET HERE",
+  "accountName": "PUT ACCOUNT NAME WITHOUT @ HERE"
 }
